--- a/first.html
+++ b/first.html
@@ -7,5 +7,15 @@
 		<h2>You</h2>
 		<h6>Want</h6>
 		<img src="evil_cat.png">
+		<strong>This Cat is Evil</strong>
+		<hr>
+
+		<table>
+			<tr>
+				<td>First Row Column</td>
+				<td>First Row Second Column</td>
+			</tr>
+
+		</table>
 	</body>
 </html>
