added form to first.html

--- a/first.html
+++ b/first.html
@@ -15,7 +15,12 @@
 				<td>First Row Column</td>
 				<td>First Row Second Column</td>
 			</tr>
-
 		</table>
+
+		<form>
+			Name:<input type="text" name="name">
+			<input type="button" value="submit">
+		</form>
+
 	</body>
 </html>
