--- a/newHTML.html
+++ b/newHTML.html
@@ -1,6 +1,33 @@
 <html>
 	<head>
 		<title>Student Bio</title>
+		<style>
+
+		/* css goes here */
+			h1 {
+				background-color: #ffff00;
+				margin-left: 20%;
+			}
+
+			h2 {
+				text-decoration: underline;
+				font-family: sans-serif;
+				font-size: 2rem;
+			}
+
+			img {
+				margin-left: 20%;
+				display: block;
+			}
+			
+			p {
+				font-size: 1.2rem;
+				color: #0000ff;
+				margin-left: 10%;
+				font-weight: bolder;
+			}
+
+		</style>
 	</head>
 <body>
 	<h1>Student Bio</h1>
@@ -9,10 +36,20 @@
 	<br>
 	<p>My name is Eliud Arbelo II, son of Eliud Arbelo SR. You can find my portfolio<a href="http://www.ea2design.com"> here.</a></p>
 	<h2>Contact Info:</h2>
-	<ul><strong>Email:</strong><a href="mailto:e.arbelo2@gmail.com">e.arbelo2@gmail.com</a></ul>
+	<ul><strong>Email:</strong><a href="mailto:e.arbelo2@gmail.com"> e.arbelo2@gmail.com</a></ul>
 	<ul><strong>Phone:</strong>703.209.7208</ul>
-	<ul><strong>Portfolio:</strong><a href="http://www.ea2design.com">ea2design</a></ul>
-	<ul><strong>Github:</strong><a href="https://github.com/elisreal">https://github.com/elisreal</a></ul>
+	<ul><strong>Portfolio:</strong><a href="http://www.ea2design.com"> ea2design.com</a></ul>
+	<ul><strong>Github:</strong><a href="https://github.com/elisreal"> github.com/elisreal</a></ul>
+<br>
+<br>
+	<ul>
+		<li>unordered list 1</li>
+	</ul>
+	<ul>
+		<li>unordered list 2</li>
+	</ul>
+
+	<p>This is a new paragraph</p>
 </body>
 
 </html>
