added css and changes

--- a/newHTML.html
+++ b/newHTML.html
@@ -1,33 +1,9 @@
 <html>
 	<head>
 		<title>Student Bio</title>
-		<style>
 
-		/* css goes here */
-			h1 {
-				background-color: #ffff00;
-				margin-left: 20%;
-			}
+			<link rel="stylesheet" type="text/css" href="style.css">
 
-			h2 {
-				text-decoration: underline;
-				font-family: sans-serif;
-				font-size: 2rem;
-			}
-
-			img {
-				margin-left: 20%;
-				display: block;
-			}
-			
-			p {
-				font-size: 1.2rem;
-				color: #0000ff;
-				margin-left: 10%;
-				font-weight: bolder;
-			}
-
-		</style>
 	</head>
 <body>
 	<h1>Student Bio</h1>
@@ -50,6 +26,19 @@
 	</ul>
 
 	<p>This is a new paragraph</p>
+
+	<div id="div1">
+		Here is some copy for Div1
+	</div>
+
+	<div class="class1">
+		This is a class
+	</div>
+
+	<section>
+			
+	</section>
+
 </body>
 
 </html>
